Use namespace path param instead of db/collection
